--- a/example.env
+++ b/example.env
@@ -4,3 +4,5 @@ DB_USERNAME=postgres
 DB_PASSWORD=root
 DB_NAME=demo_ecom
 JWT_SECRET_KEY=SuperSecret1024
+# email sending api location
+EMAIL_API_URL=http://localhost/
