implement basic payment taking

--- a/example.env
+++ b/example.env
@@ -6,3 +6,7 @@ DB_NAME=demo_ecom
 JWT_SECRET_KEY=SuperSecret1024
 # email sending api location
 EMAIL_API_URL=http://localhost/
+
+SSLC_STORE_ID=your_sandbox_store_id
+SSLC_STORE_PASSWORD=your_sandbox_password
+BACKEND_URL=http://localhost:3000
